[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T201", # flake8-print
    "UP",  # pyupgrade
]
ignore = ["B008"]
exclude = [
    "temp_*.py",
]